--- a/typst.toml
+++ b/typst.toml
@@ -7,3 +7,4 @@ license = "MIT"
 description = "Typesetting of trees of inference rules in Typst."
 exclude = ["examples", "*.pdf"]
 keywords = ["inference rules", "logic", "prooftree"]
+compiler = "0.10.0"
