--- a/typst.toml
+++ b/typst.toml
@@ -4,7 +4,10 @@ version = "0.1.1"
 entrypoint = "curryst.typ"
 authors = ["Rémi Hutin <@remih23>", "Paul Adam <@pauladam94>", "Malo <@MDLC01>"]
 license = "MIT"
-description = "Typesetting of trees of inference rules in Typst."
-exclude = ["README.md", "examples/*", "tests/*"]
-keywords = ["inference rules", "logic", "prooftree"]
+description = "Typeset trees of inference rules."
+repository = "https://github.com/pauladam94/curryst"
+keywords = ["proof tree", "prooftree", "inference", "logic"]
+categories = ["components", "visualization", "integration"]
+disciplines = ["computer-science", "mathematics"]
 compiler = "0.11.0"
+exclude = ["README.md", "examples/*", "tests/*"]
